@@ -1,7 +1,11 @@
 AUX rkt-metadata.service 242 SHA256 4e853c216abb6c6ab732a7554aa192057b70bfa671323c98d1f58163c4b4478f SHA512 32e7eb44def072ef82a18e5d315d46d4f42b096d478f6373746be84d580e7a69df74f34f99d0fd22333135300b38a5cbf8ff6ce9319d6ebc5c4b790ef018538d WHIRLPOOL fb6cba52bb8f4a8240282775cdc0eb0af8a82c9fbdd6473d5c418265198d1ec1f7de9dbec5ee727f4477d043874669acce9796359df748d13313d8be56f57a79
 AUX rkt-metadata.socket 227 SHA256 618b37860305914df77fbb0312e7ff54d9fc0c1b5b682d4cd1163fc07ec5553d SHA512 fa9044246b99161ed5903047e7b2d9c3f55d944889f263a7646d86d76ebbaf3ec86f6cd4ae2dfc5aa92169b2ac96c9dc6dbbe62ffa4437e504c539dc2b7f1600 WHIRLPOOL 3eb8f97cfb96f99b803148caa23c6882b1db6911209079a54a5aa63be27ac70adc3842be46ddca232eb547789d8b14c488fe672b56f4c3f48ec0194914cffc69
+DIST rkt-0.5.5.tar.gz 1161492 SHA256 ff3958288446486bdb5f488bea2961c73aceb95f6c2d3bf3393b8c79dba6f7d4 SHA512 cddd61b75134c4082ddac50af2fa3500f3d5f1a80171284e972bfa3714ea4fe72ac40108c66efdf5ed5589ed0df3a1cf90e095694b47de1610cc56caa12a0dab WHIRLPOOL 89c9c6e710104ee7b5b551b5e0d8cb9fc0c1bab66b3774e334a7f802188dff46ed94d6f4f93f598066308788c1f2e8d1c718e9a42b3f082e18a617c3b8599d6d
 DIST rkt-0.5.6.tar.gz 1186043 SHA256 bae39568c9e980245b13309ba89eac1f31ba8e29d7ccf3e0f85b75c34ae57a7d SHA512 cbd69991d880a5cddecfd4afdbc81c8508661cd5ba9880eff322314f1ab840676a2db36061b8624336fb15f8a270818bf799a28ae6b51982d3df71842845bdd3 WHIRLPOOL 1b8027bd28b78b8d26ff29ad286be76c37fb6a5c2da0f8b764d20960dd0f0f4ae7cf5798fe1c04549c9ad453cd3434f70a8f2ccc38192e1c5cce57da4a42af4f
+DIST rkt-0.7.0.tar.gz 1312745 SHA256 1e5996c9c26a69f107d9d4f8dd2a3e55ca3a9b8491ecbd9fe2dfe423c7c384ce SHA512 09c142a1edd3876476d425481e45d1167f4da1eb88fe8c00fb18cf0878851ad5228cdbbd4a5a20f0f6b4fc1634bc68c592bbf22c89a5a51881e7bd12b8ca4102 WHIRLPOOL 5db5f191948379d48298f360218b40d5ff67b48583c56993eb719582db875611fc4d522f711100f7c25bca5aa647bb337e5d3884b884b88ae4820e1e364a9886
+EBUILD rkt-0.5.5.ebuild 1246 SHA256 c7d31c4c3f4d7cd9219314a13e9b6e9c0594a9f4b3b103a6b1cd68b8b60ffd4a SHA512 f8bb8ec39e831aea1fc8f587c03a3cfa0fd0c198652880a4b3f6fc3a444cccda22e87d106a49e7cd79e04e0b4a25d8441e58be5fdbff39bb9003f545377b9c4a WHIRLPOOL e969b7990223317972fa55a951fe36a0612fdb564ff881a310d542cac7ceaa6e2949ab6c7dd02ca35a5bc4f0138e909d9f4ea9a10fa8949612c4355656bfe533
 EBUILD rkt-0.5.6.ebuild 1246 SHA256 c7d31c4c3f4d7cd9219314a13e9b6e9c0594a9f4b3b103a6b1cd68b8b60ffd4a SHA512 f8bb8ec39e831aea1fc8f587c03a3cfa0fd0c198652880a4b3f6fc3a444cccda22e87d106a49e7cd79e04e0b4a25d8441e58be5fdbff39bb9003f545377b9c4a WHIRLPOOL e969b7990223317972fa55a951fe36a0612fdb564ff881a310d542cac7ceaa6e2949ab6c7dd02ca35a5bc4f0138e909d9f4ea9a10fa8949612c4355656bfe533
-EBUILD rkt-9999.ebuild 1246 SHA256 c7d31c4c3f4d7cd9219314a13e9b6e9c0594a9f4b3b103a6b1cd68b8b60ffd4a SHA512 f8bb8ec39e831aea1fc8f587c03a3cfa0fd0c198652880a4b3f6fc3a444cccda22e87d106a49e7cd79e04e0b4a25d8441e58be5fdbff39bb9003f545377b9c4a WHIRLPOOL e969b7990223317972fa55a951fe36a0612fdb564ff881a310d542cac7ceaa6e2949ab6c7dd02ca35a5bc4f0138e909d9f4ea9a10fa8949612c4355656bfe533
-MISC ChangeLog 796 SHA256 db94443baadf5d7f756bab2fdee6a572fa2f3e7f08070378446397d8aff56b65 SHA512 458135a9f05641c2110ff808094c76371401f435716895d0dfa1e33ee07177d5b804cbab35c7f4f6ef8367b9bd1d2b7ac748795cd7ae9aa5fb17b109a5be5b4a WHIRLPOOL f31d51f67b834989a4ad3d048b1462d36f2ffd5f27dde081a2dc06f5e0f005731f29184180770951089d66c94dab675bab88d501c491181a974bd5fed7a6b077
-MISC metadata.xml 596 SHA256 5f997e962d9c78f7582e9c904c36f869993e602de23d07c2ac5027de8506af2c SHA512 535822f8bf2b487331325c16eec2fc60a45fc002e45721741ffb1ab24d3117760693a5e63e535f2604aa6a084e7acbac115478b3230cde720f20eed712316fc9 WHIRLPOOL a5248eafc6fb6ff0fc9777315a51b9f4db2bf9de3d1aca50fd09c4fd83f48ddc0e2fd57fa60118263b80b1d6ab8e8283313e317d8755571a3505db4c61a14a80
+EBUILD rkt-0.7.0.ebuild 2233 SHA256 d6931a4ca695febb1ef3386b0acc24c09f1145e9f94609d64c7364dc5bb9ac28 SHA512 b2c042e9452070b7d8d869f7d589e9ecff839aa106bcf77e2c6b415986c9f8fd6be54bc1392077d40d9a256f120adcc77f526257d2b33675eb8c03ea788a42de WHIRLPOOL 512d92212bb8cbff016808f7e92b76998de7143bdd6e74abb7565fa574d0e70e5266be76a230336d64606ab74de6fb51a669b3f9add9ec9049736dcd07009d8a
+EBUILD rkt-9999.ebuild 2233 SHA256 d6931a4ca695febb1ef3386b0acc24c09f1145e9f94609d64c7364dc5bb9ac28 SHA512 b2c042e9452070b7d8d869f7d589e9ecff839aa106bcf77e2c6b415986c9f8fd6be54bc1392077d40d9a256f120adcc77f526257d2b33675eb8c03ea788a42de WHIRLPOOL 512d92212bb8cbff016808f7e92b76998de7143bdd6e74abb7565fa574d0e70e5266be76a230336d64606ab74de6fb51a669b3f9add9ec9049736dcd07009d8a
+MISC ChangeLog 1091 SHA256 565069fa5c176c379f571d49798bb4ffe73ec0102fcdb84fb599fcbf69176788 SHA512 51dd7fc731880749ec10c4ea5e6dec30c9ef5fdba1e1e7b23af19d99326e72535595035144a2e8f64146f85c106e9a75e2ac50450cf4f153971d95db4cab14b3 WHIRLPOOL 17eb2242c330d0b3c09556ecdecd6fa14780be7049c464e5e0b99a4d65bf97850119ac33666c37553fed48bd24cd39ee4ea6166dcafc231ee6f27b5b74ee6f08
+MISC metadata.xml 834 SHA256 be0a650eba950e3f8783aba35affca25aeaab2b226e8de199843b81d49cdfc9c SHA512 58d241b528876af21153ad80da9249622120dc12af0d742876c1a799899fb855ded737141ceff7c4c37c96e53c4adb4026e003a664a0dd8b65bccb6114990683 WHIRLPOOL 79673dc22e97c0a7849d9749209ccc88fad5c8edb5a24cf22f0a9310228303223952ce0b27f488570c4ddb38d4c0b19b36147a48eff93fe276440e65565e75ac
